force-app/main/default/objects/SourcingGroupProduct__c/SourcingGroupProduct__c.object-meta.xml
<CustomObject>
    <label>Sourcing Group Product</label>
    <pluralLabel>Sourcing Group Products</pluralLabel>
    <nameField>
        <displayFormat>SP{YY}{MM}{DD}{0000}</displayFormat>
        <label>Sourcing Group Product	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>