force-app/main/default/objects/SourcingGroupProduct__c/fields/SourcingGroupLevel1__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel1__c</fullName>
    <formula>ProductId__r.SourcingGroupLevel1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sourcing Group Level1</label>
    <type>Text</type>
</CustomField>