force-app/main/default/objects/SourcingGroupProduct__c/fields/SourcingGroupLevel2__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel2__c</fullName>
    <formula>ProductId__r.SourcingGroupLevel2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sourcing Group Level2</label>
    <type>Text</type>
</CustomField>