force-app/main/default/objects/SourcingGroupProduct__c/fields/SourcingGroupLevel3__c.field-meta.xml
<CustomField>
    <fullName>SourcingGroupLevel3__c</fullName>
    <formula>ProductId__r.SourcingGroupLevel3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sourcing Group Level3</label>
    <type>Text</type>
</CustomField>